--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,10 @@
             <artifactId>geoip2</artifactId>
             <version>2.15.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
 
     </dependencies>
     <dependencyManagement>
