--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 server.port=9090
 geolite2.url=GeoLite2-Country.mmdb
+spring.application.name=Geo2LiteService
+eureka.client.service-url.defaultZone=http://localhost:8881/eureka/
